<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="te.app.aljoud.pages.request_to_buy.view_model.RequestBuyViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp4h">


            <te.app.aljoud.customViews.views.CustomTextViewBold
                android:id="@+id/tv_sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10h"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginEnd="@dimen/dp15w"
                android:text="@string/request_to_buy_sub_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <te.app.aljoud.customViews.views.CustomTextViewRegular
                android:id="@+id/tv_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp10h"
                android:layout_marginEnd="@dimen/dp15w"
                android:text="@string/request_to_buy_body"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sub_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_reply"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp14w"
                android:layout_marginTop="@dimen/dp8h"
                android:layout_marginEnd="@dimen/dp14w"
                android:hint="@string/request_details"
                android:textColorHint="@color/medium_color"
                app:helperTextTextColor="@color/black"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_body">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp100w"
                    android:gravity="top"
                    android:inputType="textImeMultiLine"
                    android:text="@={viewmodel.requestToBuy.message}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/overlayBackground" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_ask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp8h"
                android:onClick="@{()-> viewmodel.requestToBuy()}"
                android:text="@string/send_request"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_reply" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>